--- a/module/Stock/view/stock/stock/add.phtml
+++ b/module/Stock/view/stock/stock/add.phtml
@@ -1,10 +1,6 @@
-<?php
-$title = 'Add new stock';
-$this->headTitle($title);
-?>
-<h1><?php echo $this->escapeHtml($title); ?></h1>
+<h1>Neue Aktie hinzufügen</h1>
 
-<p>Here you can add new stocks to the system. Examples for valid stock symbols are:</p>
+<p>Hier können Sie eine neue Aktie hinzufügen. Dazu benötigen Sie das Symbol der Aktie. Hier sind ein paar Beispiele:</p>
 <ul>
 	<li>SAP.DE</li>
 	<li>RWE.DE</li>
