--- a/module/Stock/view/stock/stock/home.phtml
+++ b/module/Stock/view/stock/stock/home.phtml
@@ -1,15 +1,22 @@
-<h1>Welcome to my zend framework / mongodb project: stocks</h1>
+<h1>Aktienkurse</h1>
 
+<h2>Zend Framework 2 + mongodb + html5 canvas</h2>
+
+<p>
+	Mit diesem Projekt möchte ich demonstrieren, wie man mit dem Zend Framework 2 in
+	Verbindung mit mongodb und dem neuen HTML 5 Canvas Element interaktive Charts
+	darstellen kann.
+</p>
 <ul>
-	<li><a href="/">Home</a></li>
-	<li><a href="/stock">Stocks (mongodb)</a></li>
-	<li><a href="/album">Album tutorial (mysql)</a></li>
+	<li><a href="/">Startseite</a></li>
+	<li><a href="/stock">Aktien (mongodb)</a></li>
+	<li><a href="/album">Alben (mysql)</a></li>
 	<li><a href="/stock/github">Github</a></li>
 </ul>
 
 <br/>
 
-<img src="/img/i-have-no-idea-what-i-am-doing.jpg" />
+<img src="/img/aktien.jpg" />
 
 <br/>
 <br/>
