--- a/module/Stock/view/stock/stock/edit.phtml
+++ b/module/Stock/view/stock/stock/edit.phtml
@@ -1,8 +1,4 @@
-<?php
-$title = 'Edit stock';
-$this->headTitle($title);
-?>
-<h1><?php echo $this->escapeHtml($title); ?></h1>
+<h1>Aktie bearbeiten</h1>
 
 <?php
 $form = $this->form;
