more responsive tests

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -24,7 +24,9 @@
 			<a href="/stock/github">Github</a>
 		</div>
         <div id="contentContainer">
-            <?php echo $this->content; ?>
+			<div id="innerContentContainer">
+				<?php echo $this->content; ?>
+			</div>
         </div>
         <?php echo $this->inlineScript() ?>
     </body>
